# license-scanner-review-tool

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  main.code-workspace
frontend/: .editorconfig  .gitattributes  .gitignore  README.md  env.d.ts  eslint.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
frontend/e2e/: finding-curations.spec.ts  finding-review.spec.ts  helpers.ts  license-conclusion-status.spec.ts  license-curations.spec.ts  package-review.spec.ts  path-excludes.spec.ts  tsconfig.json  vue.spec.ts
frontend/src/: App.vue  api.ts  main.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: AppButton.vue  AppCard.vue  AppInput.vue  AppNote.vue  AppPanel.vue  CollapsiblePanel.vue  DependencyGraph.vue  DescribedSelect.vue  InfoTooltip.vue  LicensePill.vue  SpdxInput.vue
frontend/src/router/: index.ts
frontend/src/stores/: scanResult.ts
frontend/src/utils/: licenseCompatibility.ts  spdx.test.ts  spdx.ts
frontend/src/views/: AboutView.vue  ScanResultView.vue
server/: .gitignore  README.md  export_openapi.py  license-compatibility.yml  main.py  poetry.lock.license  pyproject.toml  test_main.py
