# SPDX-FileCopyrightText: 2026 Lukas Hass <lukas@slucky.de>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=8.0",
    "pytest-httpx>=0.35",
]

[tool.pytest.ini_options]
addopts = "--ignore-glob=ort-out**/"
